@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181211"
-#define public MagickPackageReleaseDate "snapshot-20181211"
+#define public MagickPackageVersionAddendum ".020181212"
+#define public MagickPackageReleaseDate "snapshot-20181212"
